nikon_microscope/PI_GCS2_DLL.bas


Public Declare Function PI_VCO Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szAxes As String, ByRef pbValueArray As Long) As Long
Public Declare Function PI_qVCO Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szAxes As String, ByRef pbValueArray As Long) As Long

Public Declare Function PI_SPA Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szAxes As String, ByRef iParameterArray As Long, ByRef pdValueArray As Double, ByVal szStrings As String) As Long
Public Declare Function PI_qSPA Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szAxes As String, ByRef iParameterArray As Long, ByRef pdValueArray As Double, ByVal szStrings As String, ByVal iMaxNameSize As Long) As Long
Public Declare Function PI_SEP Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szPassWord As String, ByVal szAxes As String, ByRef iParameterArray As Long, ByRef pdValueArray As Double, ByVal szStrings As String) As Long
Public Declare Function PI_qSEP Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szAxes As String, ByRef iParameterArray As Long, ByRef pdValueArray As Double, ByVal szStrings As String, ByVal iMaxNameSize As Long) As Long
Public Declare Function PI_WPA Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szPassWord As String, ByVal szAxes As String, ByRef iParameterArray As Long) As Long
Public Declare Function PI_RPA Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szAxes As String, ByRef iParameterArray As Long) As Long
Public Declare Function PI_SPA_String Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szAxes As String, ByRef iParameterArray As Long, ByVal szStrings As String) As Long
Public Declare Function PI_qSPA_String Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szAxes As String, ByRef iParameterArray As Long, ByVal szStrings As String, ByVal iMaxNameSize As Long) As Long
Public Declare Function PI_SEP_String Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szPassWord As String, ByVal szAxes As String, ByRef iParameterArray As Long, ByVal szStrings As String) As Long
Public Declare Function PI_qSEP_String Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szAxes As String, ByRef iParameterArray As Long, ByVal szStrings As String, ByVal iMaxNameSize As Long) As Long

Public Declare Function PI_STE Lib "PI_GCS2_DLL.dll" (ByVal iId As Long, ByVal szAxes As String, ByRef dOffsetArray As Double) As Long
Public Declare Function PI_qSTE Lib "PI_GCS2_DLL.dll" (ByVal iId As Long, ByVal szAxes As String, ByRef pdValueArray As Double) As Long
Public Declare Function PI_IMP Lib "PI_GCS2_DLL.dll" (ByVal iId As Long, ByVal szAxes As String, ByVal pdImpulseSize As Double) As Long
Public Declare Function PI_IMP_PulseWidth Lib "PI_GCS2_DLL.dll" (ByVal iId As Long, ByVal cAxis As Byte, pdValarray, ByVal iPulseWidth As Long) As Long
Public Declare Function PI_qIMP Lib "PI_GCS2_DLL.dll" (ByVal iId As Long, ByVal szAxes As String, ByRef pdValueArray As Double) As Long

Public Declare Function PI_SAI Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szOldAxes As String, ByVal szNewAxes As String) As Long
Public Declare Function PI_qSAI Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szAxes As String, ByVal iBufferSize As Long) As Long
Public Declare Function PI_qSAI_ALL Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szAxes As String, ByVal iBufferSize As Long) As Long

Public Declare Function PI_CCL Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal iComandLevel As Long, ByVal szPassWord As String) As Long
Public Declare Function PI_qCCL Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByRef piComandLevel As Long) As Long

Public Declare Function PI_AVG Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal iAverrageTime As Long) As Long
Public Declare Function PI_qAVG Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal iAverrageTime As Long) As Long

Public Declare Function PI_qHAR Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szAxes As String, ByRef pbValueArray As Long) As Long
Public Declare Function PI_qLIM Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szAxes As String, ByRef pbValueArray As Long) As Long
Public Declare Function PI_qTRS Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szAxes As String, ByRef pbValueArray As Long) As Long
Public Declare Function PI_FNL Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szAxes As String) As Long
Public Declare Function PI_FPL Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szAxes As String) As Long
Public Declare Function PI_FRF Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szAxes As String) As Long
Public Declare Function PI_FED Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szAxes As String, ByRef piEdgeArray As Long, ByRef piParamArray As Long) As Long
Public Declare Function PI_qFRF Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szAxes As String, ByRef pbValueArray As Long) As Long
Public Declare Function PI_DIO Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByRef piChannelsArray As Long, ByRef pbValueArray As Long, ByVal iArraySize As Long) As Long
Public Declare Function PI_qDIO Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByRef piChannelsArray As Long, ByRef pbValueArray As Long, ByVal iArraySize As Long) As Long
Public Declare Function PI_qTIO Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByRef piInputNr As Long, ByRef piOutputNr As Long) As Long
Public Declare Function PI_IsControllerReady Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByRef piControllerReady As Long) As Long
Public Declare Function PI_qSRG Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szAxes As String, ByRef iRegisterArray As Long, ByRef iValArray As Long) As Long

Public Declare Function PI_ATC Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal piChannels As Long, ByRef piValueArray As Long, ByVal iArraySize As Long) As Long
Public Declare Function PI_qATC Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal piChannels As Long, ByRef piValueArray As Long, ByVal iArraySize As Long) As Long
Public Declare Function PI_qATS Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal piChannels As Long, ByVal piOptions As Long, ByRef piValueArray As Long, ByVal iArraySize As Long) As Long

'/////////////////////////////////////////////////////////////////////////////
'// Macro commande
Public Declare Function PI_IsRunningMacro Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByRef pbRunningMacro As Long) As Long
Public Declare Function PI_MAC_BEG Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szMacroName As String) As Long
Public Declare Function PI_MAC_START Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szMacroName As String) As Long
Public Declare Function PI_MAC_NSTART Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szMacroName As String, ByVal nrRuns As Long) As Long
Public Declare Function PI_MAC_END Lib "PI_GCS2_DLL.dll" (ByVal ID As Long) As Long
Public Declare Function PI_MAC_DEL Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szMacroName As String) As Long
Public Declare Function PI_MAC_DEF Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szMacroName As String) As Long
Public Declare Function PI_MAC_qDEF Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szBuffer As String, ByVal iBufferSize As Long) As Long
Public Declare Function PI_qMAC Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szMacroName As String, ByVal szBuffer As String, ByVal iBufferSize As Long) As Long
Public Declare Function PI_qRMC Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szBuffer As String, ByVal iBufferSize As Long) As Long

Public Declare Function PI_DEL Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal nMilliSeconds As Long) As Long
Public Declare Function PI_WAC Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szCondition As String) As Long
Public Declare Function PI_MEX Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szCondition As String) As Long

'/////////////////////////////////////////////////////////////////////////////
'// String commands.
Public Declare Function PI_GcsCommandset Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szCommand As String) As Long
Public Declare Function PI_GcsGetAnswer Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szAnswer As String, ByVal iBufferSize As Long) As Long
Public Declare Function PI_GcsGetAnswerSize Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByRef iAnswerSize As Long) As Long


'/////////////////////////////////////////////////////////////////////////////
'// limits
Public Declare Function PI_qTMN Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szAxes As String, ByRef pdValueArray As Double) As Long
Public Declare Function PI_qTMX Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szAxes As String, ByRef pdValueArray As Double) As Long
Public Declare Function PI_NLM Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szAxes As String, ByRef pdValueArray As Double) As Long
Public Declare Function PI_qNLM Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szAxes As String, ByRef pdValueArray As Double) As Long
Public Declare Function PI_PLM Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szAxes As String, ByRef pdValueArray As Double) As Long
Public Declare Function PI_qPLM Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szAxes As String, ByRef pdValueArray As Double) As Long
Public Declare Function PI_SSL Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szAxes As String, ByRef pbValueArray As Long) As Long
Public Declare Function PI_qSSL Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szAxes As String, ByRef pbValueArray As Long) As Long

